--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
       <title></title>
    </head>
    <body>
+      <header>
+         <div class="container">
+            
+         </div>
+      </header>
+
       <footer>
 
       <div id="googleMap" style="width:100%;height:20em;"></div>
