--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <link rel="stylesheet" href="css/global.css">
+      <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/footer.css">
       <title></title>
    </head>
    <body>
       <header>
          <div class="container">
+            <div class="header__flex--wrapper">
+               <div class="header__logo">
+                  <p>
+                     neki logo
+                  </p>
 
+               </div>
+               <nav id="main__nav">
+                  <ul class="nav__ul">
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Pocetna</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">O nama</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Galerija</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Kontakt</a></li>
+                  </ul>
+               </nav>
+            </div>
          </div>
       </header>
 
