ima i slicica i haosa

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" href="css/global.css">
       <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/footer.css">
+      <link rel="stylesheet" href="css/parallax.css">
       <title></title>
    </head>
    <body>
@@ -28,6 +29,22 @@
             </div>
          </div>
       </header>
+
+      <section class="home__parallax">
+         <div class="container">
+            <div class="home__flex-wrapper">
+               <h1 class="home__parallax--h1">
+                  Najkvalitetnije hostelske usluge
+               </h1>
+
+               <div class="home__btn">
+                  <a href="#" class="home__btn--a">
+                     Citaj dalje
+                  </a>
+               </div>
+            </div>
+         </div>
+      </section>
 
       <footer>
          <div id="googleMap" style="width:100%;height:20em;"></div>
