--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
       <title></title>
    </head>
    <body>
-      
+      <header>
+         <div class="container">
+            <div class="header__flex--wrapper">
+               <div class="header__logo">
+                  <p>
+                     neki logo
+                  </p>
+
+               </div>
+               <nav id="main__nav">
+                  <ul class="nav__ul">
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Pocetna</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">O nama</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Galerija</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Kontakt</a></li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
+      </header>
 
       <section class="home__parallax">
          <div class="container">
@@ -29,7 +48,7 @@
 
       <footer>
          <div id="googleMap" style="width:100%;height:20em;"></div>
-         awwwwwwwwwwwwwwwwwwwwwwwwwwdasdaawwwww<br />wwwww<br />www<br />wwwwwwwwwwwww<br />dasdaaww<br />wwwwwwwwwwwwwwwwwwwwwwwwdasdaawwwwwwwwwwwwwwwwwwwwwwwwwwdasda
+         
       </footer>
 
       <script>
