--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
       <title></title>
    </head>
    <body>
-      
+
+      <footer>
+         <div id="googleMap" style="width:100%;height:20em;"></div>
+
+      </footer>
+
+      <script>
+         function myMap() {
+           var myCenter = new google.maps.LatLng(45.259429, 19.839882);
+           var mapCanvas = document.getElementById("googleMap");
+           var mapOptions = {center: myCenter, zoom: 13};
+           var map = new google.maps.Map(mapCanvas, mapOptions);
+           var marker = new google.maps.Marker({position:myCenter});
+           marker.setMap(map);
+         }
+      </script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfJVc6tQMS9Ai-qRK8jjAbpsZ4wKN7ro8&callback=myMap"></script>
+
+
    </body>
 </html>
