finalno sve radi ^^

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
    </head>
    <body>
 
-
-      
+      <!--header i navigacija-->
 
       <header>
          <div class="container">
@@ -20,7 +19,6 @@
                   <p>
                      neki logo
                   </p>
-
                </div>
                <nav id="main__nav">
                   <ul class="nav__ul">
@@ -34,13 +32,16 @@
          </div>
       </header>
 
+      <!--header nav kraj-->
+
+      <!--Parallax pocetak-->
+
       <section class="home__parallax">
          <div class="container">
             <div class="home__flex-wrapper">
                <h1 class="home__parallax--h1">
                   Najkvalitetnije hostelske usluge
                </h1>
-
                <div class="home__btn">
                   <a href="#" class="home__btn--a">
                      Citaj dalje
@@ -50,10 +51,16 @@
          </div>
       </section>
 
+      <!--parallax kraj-->
+
+      <!--footer pocetak-->
+
      <footer>
          <div id="googleMap" style="width:100%;height:20em;"></div>
 
       </footer>
+
+      <!--Footer kraj-->
 
       <script>
          function myMap() {
@@ -66,7 +73,5 @@
          }
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfJVc6tQMS9Ai-qRK8jjAbpsZ4wKN7ro8&callback=myMap"></script>
-
-
    </body>
 </html>
