todor dodao .css za sekciju i jos nest na html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/parallax.css">
+      <link rel="stylesheet" href="css/section.css">
       <title></title>
    </head>
    <body>
