promena sitna za test

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
       <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/parallax.css">
       <link rel="stylesheet" href="css/section.css">
+      <link rel="stylesheet" href="css/random.css">
       <title></title>
    </head>
    <body>
 
       <footer>
          <div id="googleMap" style="width:100%;height:20em;"></div>
-
+         <p>
+            todor random p
+         </p>
       </footer>
 
       <script>
