--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/parallax.css">
-      <link rel="stylesheet" href="css/section.css">
+      <link rel="stylesheet" href="css/section_1.css">
       <link rel="stylesheet" href="css/responsive.css">
       <title></title>
    </head>
