--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/global.css">
       <link rel="stylesheet" href="css/header.css">
-      <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/parallax.css">
+      <link rel="stylesheet" href="css/section__products.css">
+      <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/responsive.css">
       <title></title>
    </head>
@@ -53,6 +54,31 @@
       </section>
 
       <!--parallax kraj-->
+
+      <section class="section__products">
+         <div class="container">
+            <div class="section__products--flex-wrapper">
+               <div class="section__products--box">
+                  <div class="products__box--image-wrapper">
+                     <div class="products__box--image-parking">
+                     </div>
+                  </div>
+               </div>
+               <div class="section__products--box">
+                  <div class="products__box--image-wrapper">
+                     <div class="products__box--image-wifi">
+                     </div>
+                  </div>
+               </div>
+               <div class="section__products--box">
+                  <div class="products__box--image-wrapper">
+                     <div class="products__box--image-breakfast">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
 
       <!--footer pocetak-->
 
