--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/parallax.css">
       <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <title></title>
    </head>
    <body>
@@ -57,6 +58,34 @@
       <!--footer pocetak-->
 
      <footer>
+       <div class="contacts">
+         <h2>Contacts:</h2>
+           <p>
+             <i style="font-size:24px;padding-top:5px" class="fa icon">&#xf015;</i>
+
+             </i>
+            "Lukijana Musickog 19,Novi Sad"
+           </p>
+           <p>
+             <i style="font-size:22px;padding-top:6px" class="fa icon">&#xf0ac;</i>
+
+             </i>
+           "Serbia-Europe"
+           </p>
+           <p>
+             <i style="font-size:20px;padding-top:6px" class="fa icon">&#xf0e0;</i>
+
+             </i>
+           "nesto@gmail.com"
+          </p>
+
+       </div>
+
+
+
+
+
+
          <div id="googleMap" style="width:100%;height:20em;"></div>
 
       </footer>
