--- a/index.html
+++ b/index.html
@@ -84,36 +84,45 @@
       <!--footer pocetak-->
 
      <footer>
-       <div class="contacts">
+       <div class="container">
+<div class="footer__flex--wrapper">
+       <div class="footer__contacts">
          <h2>Contacts:</h2>
            <p>
-             <i style="font-size:24px;padding-top:5px" class="fa icon">&#xf015;</i>
-
-             </i>
+             <i style="font-size:24px;padding-top:5px" class="fa footer__contacts--icon">&#xf015;</i>
             "Lukijana Musickog 19,Novi Sad"
            </p>
            <p>
-             <i style="font-size:22px;padding-top:6px" class="fa icon">&#xf0ac;</i>
-
-             </i>
+             <i style="font-size:22px;padding-top:6px" class="fa footer__contacts--icon">&#xf0ac;</i>
            "Serbia-Europe"
            </p>
            <p>
-             <i style="font-size:20px;padding-top:6px" class="fa icon">&#xf0e0;</i>
-
-             </i>
+             <i style="font-size:20px;padding-top:6px" class="fa footer__contacts--icon">&#xf0e0;</i>
            "nesto@gmail.com"
           </p>
 
+          <h2>Social:</h2>
+            <p>
+              <i style="font-size:24px;padding-top:6px" class="fa footer__contacts--icon">&#xf095;</i>
+             "064 223-223"
+            </p>
+            <p>
+              <i style="font-size:24px;padding-top:6px" class="fa footer__contacts--icon">&#xf09a;</i>
+            "Mandic"
+            </p>
+            <p>
+              <i style="font-size:24px;padding-top:6px" class="fa footer__contacts--icon">&#xf099;</i>
+            "ne znam"
+           </p>
        </div>
 
 
 
 
 
-
-         <div id="googleMap" style="width:100%;height:20em;"></div>
-
+         <div id="googleMap" style="width:100%;height:28em;border:2px solid rgb(0,30,34);"></div>
+      </div>
+      </div>
       </footer>
 
       <!--Footer kraj-->
