--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
       <!--parallax kraj-->
 
+      <!--Ponude pocetak-->
+
       <section class="section__products">
          <div class="container">
             <div class="section__products--flex-wrapper">
@@ -80,6 +82,8 @@
             </div>
          </div>
       </section>
+
+      <!--Ponude kraj-->
 
       <!--footer pocetak-->
 
