--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <header>
          <div class="container">
             <div class="header__flex--wrapper">
-               <div class="header__logo">
-                  <p>
-                     neki logo
-                  </p>
                </div>
                <nav id="main__nav">
+                 <div class="header__logo">
+                    <p>
+                       neki logo
+                    </p>
+                    </div>
                   <ul class="nav__ul">
                      <li class="nav__ul--li"><a class="nav__li--a" href="#">Pocetna</a></li>
                      <li class="nav__ul--li"><a class="nav__li--a" href="#">O nama</a></li>
@@ -31,7 +32,6 @@
                      <li class="nav__ul--li"><a class="nav__li--a" href="#">Kontakt</a></li>
                   </ul>
                </nav>
-            </div>
          </div>
       </header>
 
@@ -88,6 +88,9 @@
       <!--footer pocetak-->
 
      <footer>
+
+       <!--Contacts pocetak-->
+
          <div class="container">
             <div class="footer__flex--wrapper">
                <div class="footer__contacts">
@@ -121,9 +124,35 @@
                            "ne znam"
                      </p>
                </div>
+
+        <!--Contacts kraj-->
+
+
             <div id="googleMap" style="width:100%;height:28em;border:2px solid rgb(0,30,34);"></div>
          </div>
       </div>
+
+        <!--Slides pocetak-->
+<br />
+<br />
+      <div class="container">
+
+
+         <div class="footer__slide">
+            <img class="mySlides" src="images\gallery\IMG_0628.jpg"style="width:100%">
+            <img class="mySlides" src="img_lights.jpg"style="width:100%">
+            <img class="mySlides" src="img_mountains.jpg"style="width:100%">
+            <img class="mySlides" src="img_forest.jpg"style="width:100%">
+
+              <button class="footer__slide--display-left" onclick="plusDivs(-1)">&#10094;</button>
+              <button class="footer__slide--display-right" onclick="plusDivs(1)">&#10095;</button>
+         </div>
+
+      </div class="container">
+
+
+       <!--Slides kraj-->
+
    </footer>
 
       <!--Footer kraj-->
@@ -139,5 +168,34 @@
          }
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfJVc6tQMS9Ai-qRK8jjAbpsZ4wKN7ro8&callback=myMap"></script>
+
+
+      <script>
+      var slideIndex = 1;
+      showDivs(slideIndex);
+
+      function plusDivs(n) {
+        showDivs(slideIndex += n);
+      }
+
+      function showDivs(n) {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        if (n > x.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = x.length}
+        for (i = 0; i < x.length; i++) {
+           x[i].style.display = "none";
+        }
+        x[slideIndex-1].style.display = "block";
+      }
+      </script>
+
+
+
+
+
+      <script src="js/jquery-3.3.1.min.js"></script>
+      <script src="js/navshrink.js"></script>
+
    </body>
 </html>
