--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> 
       <link rel="stylesheet" href="css/global.css">
       <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/parallax.css">
