--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
       <link rel="stylesheet" href="css/global.css">
       <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/parallax.css">
@@ -15,18 +15,13 @@
    <body>
 
       <!--header i navigacija-->
-
       <header>
          <div class="container">
             <div class="header__flex--wrapper">
-               <div class="header__logo">
-                  <p>
-                     neki logo
-                  </p>
-                  </div>
+                  <img src="images/icons/logo.png">
                <nav id="main__nav">
                   <ul class="nav__ul">
-                     <li class="nav__ul--li"><a class="nav__li--a" href="#">Pocetna</a></li>
+                     <li class="nav__ul--li"><a class="nav__li--a nav__li--active" href="#">Pocetna</a></li>
                      <li class="nav__ul--li"><a class="nav__li--a" href="#">O nama</a></li>
                      <li class="nav__ul--li"><a class="nav__li--a" href="#">Galerija</a></li>
                      <li class="nav__ul--li"><a class="nav__li--a" href="#">Kontakt</a></li>
@@ -35,6 +30,7 @@
             </div>
          </div>
       </header>
+
 
       <!--header nav kraj-->
 
