--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
          <div class="container">
             <div class="home__flex-wrapper">
                <h1 class="home__parallax--h1">
-                  Najkvalitetnije hostelske usluge
+                  Ho<span class="parallax__h1--color">s</span>tel Mandic <br />
+                  <span class="test">No</span>vi Sad
                </h1>
                <div class="home__btn">
-                  <a href="#" class="home__btn--a">
-                     Citaj dalje
+                  <a href="#section__products" class="home__btn--a">
+                     Kontakt
                   </a>
                </div>
             </div>
@@ -55,7 +56,7 @@
 
       <!--Ponude pocetak-->
 
-      <section class="section__products">
+      <section class="section__products" id="section__products">
          <div class="container">
             <div class="section__products--flex-wrapper">
                <div class="section__products--box">
@@ -81,6 +82,12 @@
       </section>
 
       <!--Ponude kraj-->
+
+      <section class="prostor">
+         <p>
+            awdawd
+         </p>
+      </section>
 
       <!--footer pocetak-->
 
