--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
          <div class="container">
             <div class="home__flex-wrapper">
                <h1 class="home__parallax--h1">
-                  Najkvalitetnije hostelske usluge
+                  Hostel Mandic<br />
+                  Novi Sad
                </h1>
                <div class="home__btn">
                   <a href="#" class="home__btn--a">
