--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="css/header.css">
       <link rel="stylesheet" href="css/parallax.css">
       <link rel="stylesheet" href="css/section__products.css">
+      <link rel="stylesheet" href="css/section_ehm.css">
       <link rel="stylesheet" href="css/footer.css">
       <link rel="stylesheet" href="css/responsive.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +37,7 @@
 
       <!--Parallax pocetak-->
 
-      <section class="home__parallax">
+      <section class="home__parallax home__height">
          <div class="container">
             <div class="home__flex-wrapper">
                <h1 class="home__parallax--h1">
@@ -83,10 +84,49 @@
 
       <!--Ponude kraj-->
 
-      <section class="prostor">
-         <p>
-            awdawd
-         </p>
+      <section class="home__parallax height__2">
+         <div class="container">
+            <div class="wrapper">
+
+               <div class="box">
+                  neka slicka
+               </div>
+
+
+
+
+
+
+               <div class="box">
+                  neka slicka
+               </div>
+
+
+
+
+
+
+               <div class="box">
+                  neka slicka
+               </div>
+
+
+
+
+
+
+
+               <div class="box">
+                  neka slicka
+               </div>
+
+
+               <div class="box">
+                  neka slicka
+               </div>
+
+      </div>
+   </div>
       </section>
 
       <!--footer pocetak-->
