--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
       <!--Parallax pocetak-->
 
       <section class="home__parallax home__height">
-         <div class="container">
-            <div class="home__flex-wrapper">
-               <h1 class="home__parallax--h1">
-                  Ho<span class="parallax__h1--color">s</span>tel Mandic <br />
-                  <span class="test">No</span>vi Sad
-               </h1>
-               <div class="home__btn">
-                  <a href="#section__products" class="home__btn--a">
-                     Kontakt
-                  </a>
+         <div class="home__parallax--overlay">
+            <div class="container">
+               <div class="home__flex-wrapper">
+                  <h1 class="home__parallax--h1">
+                     Ho<span class="parallax__h1--color">s</span>tel Mandic <br />
+                     <span class="test">No</span>vi Sad
+                  </h1>
+                  <div class="home__btn">
+                     <a href="#section__products" class="home__btn--a">
+                        Kontakt
+                     </a>
+                  </div>
                </div>
             </div>
          </div>
@@ -85,48 +87,27 @@
       <!--Ponude kraj-->
 
       <section class="home__parallax height__2">
-         <div class="container">
-            <div class="wrapper">
-
-               <div class="box">
-                  neka slicka
+         <div class="home__parallax--overlay">
+            <div class="container">
+               <div class="wrapper">
+                  <div class="box">
+                     neka slicka
+                  </div>
+                  <div class="box">
+                     neka slicka
+                  </div>
+                  <div class="box">
+                     neka slicka
+                  </div>
+                  <div class="box">
+                     neka slicka
+                  </div>
+                  <div class="box">
+                     neka slicka
+                  </div>
                </div>
-
-
-
-
-
-
-               <div class="box">
-                  neka slicka
-               </div>
-
-
-
-
-
-
-               <div class="box">
-                  neka slicka
-               </div>
-
-
-
-
-
-
-
-               <div class="box">
-                  neka slicka
-               </div>
-
-
-               <div class="box">
-                  neka slicka
-               </div>
-
-      </div>
-   </div>
+            </div>
+         </div>
       </section>
 
       <!--footer pocetak-->
