za todora slideri

--- a/index.html
+++ b/index.html
@@ -112,33 +112,24 @@
 
       <!--footer pocetak-->
 
+
+      <section class="marko_proba">
+         <div class="container">
+            <div class="left">
+               wadawdawd
+            </div>
+
+            <div class="left">
+               awdawddsdsd
+            </div>
+         </div>
+      </section>
+
      <footer>
 
      <!--slajd slike pocetak-->
 
-       <section class="footer__section1" id="footer__section1">
-        <div class="footer__section1--okvir">
-        </div>
-        <p class="proba">
-        neki random tekst
-        </p>
-       </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-       <!--slajd slike kraj-->
+     
        <!--Contacts pocetak-->
 
          <div class="container">
